--- a/style.css
+++ b/style.css
@@ -47,13 +47,9 @@ body{
 }
 @media (max-width:768px) {
     .contanier {
-           grid-template-areas:
-                "A A A A   A A A A   A A A A"
-                "B B B B B  B B B B B B B"
-                " C C C C C  C C C C C C C" 
-                "D D D D D E E E E E E E";
-          
-    
-    
-        }
+            grid-template-areas:
+                    "A A A A   A A A A   A A A A"
+                    "B B B B B  B B B B B C C"
+                    "D D D D D D  E E E E E E";
+}
 }
